2016-03-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-457
	
	* src/m_optproperties.cc
	(pha_mat_sptFromData): Fixed T-handling to be consistent with all other
	pha_mat_spt* and opt_prop_spt* methods, ie skip T-interpolation	when only
	single T given.
	
	(opt_prop_sptFromData): Bugfix in derermining number of scatt elems per each
	species.

2016-03-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-456
	
	* src/m_disort.cc (DisortCalc):
	Bugfix of phase_function container sizing (mixed up sizings for old and new
	versions).

2016-03-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-455
	
	* src/m_append.h:

	Allow appending a Matrix or a Vector to an empty Matrix. Feature
	requested by Jana.

2016-03-08 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-454
	
	Added temperature and scat angle grid interpolation of phase matrix for
	Disort data prep. So far this is experimental, hence implemented as additional
	option. So far previous state remains the default.
	
	* src/disort.cc, disort.h
	
	(phase_functionCalc2, pmomCalc2):
	These methods hold the altyernative phase matrix / phase function handling. 
	phase_functionCalc2 applies scat data interpolation methods developed for DOIT
	and consistent with extinction/absorption derivation methods applied by
	dtauc_ssalbCalc, namely spt_calc_agenda, opt_prop_part_agenda, and
	pha_mat_sptFromMonoData.
	
	(dtauc_ssalbCalc):
	Remove implicit assumption of cloudbox_limits[0]==0 (not a critical issue for
	now, where we disallow lower cloudbox limit anywhere else but at lowest atm
	level. but beter to avoid future confusions...).
	
	* src/m_disort.cc (DisortCalc):
	Added T- & data_za_grid-interpolation option for phase matrix as alternative.
	Removed doit_i_field initialization, instead have it as input initialized by
	DisortInit. Extend thread-safe region (new phase matrix methods make changes
	to variables passed into disort, hence not only disort itself but also these